spacing fix of elements

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -351,6 +351,10 @@ yellow: #FFB037;
   background-color: transparent;
 }
 
+#nav-item-one {
+  margin-right: 48px !important;
+}
+
 .formBtn {
   color: #ff0000;
   border: 1px solid #ff0000;
